# TXPacker

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle  build.gradle.kts  dictionary.txt  proguard-rules.pro
app/src/androidTest/java/com/noxpeteam/txpacker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tokyo.cpp  txpacker.cpp  txpacker.h  txpackerlib.cpp
app/src/main/java/com/noxpeteam/txpacker/: BaseActivity.kt  BuildConfig.kt  Logger.kt  MainActivity.kt  NativeTextProvider.kt  PermissionManager.kt  SettingsActivity.kt  TXPackerLib.kt  TexturePackFixer.kt  TexturePackParser.kt
app/src/main/res/anim/: chip_deselect.xml  chip_select.xml  fade_in.xml  radio_deselect.xml  radio_select.xml  settings_enter.xml  settings_exit.xml  slide_out_right.xml
app/src/main/res/color/: chip_background_color.xml  chip_text_color.xml  switch_thumb_color.xml  switch_track_color.xml
app/src/main/res/drawable/: app_icon_circle.xml  button_gradient.xml  card_background.xml  dialog_background.xml  gradient_background.xml  ic_warning.xml  language_selector_background.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  dialog_restart.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: network_security_config.xml  provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
